<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/relative_layout_margin_top">

    <TextView
        android:id="@+id/hour_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/timework"
        />
    <TextView
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_1"
        android:maxLines="2"
        android:text="@string/monday"
        />

    <TextView
        android:id="@+id/hour_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_1"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/timework"
        />
    <TextView
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/monday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_2"
        android:maxLines="2"
        android:text="@string/tuesday"
        />

    <TextView
        android:id="@+id/hour_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_2"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/timework"
        />
    <TextView
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tuesday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_3"
        android:maxLines="2"
        android:text="@string/wednesday"
        />

    <TextView
        android:id="@+id/hour_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_3"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/timework"
        />
    <TextView
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/wednesday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_4"
        android:maxLines="2"
        android:text="@string/thursday"
        />

    <TextView
        android:id="@+id/hour_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_4"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/timework"
        />
    <TextView
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/thursday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_5"
        android:maxLines="2"
        android:text="@string/friday"
        />

    <TextView
        android:id="@+id/hour_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_5"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/close"
        />
    <TextView
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/friday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_6"
        android:maxLines="2"
        android:text="@string/saturday"
        />

    <TextView
        android:id="@+id/hour_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hour_6"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginRight="@dimen/text_view_margin_right"
        android:maxLines="1"
        android:text="@string/close"
        />
    <TextView
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/saturday"
        android:layout_marginTop="@dimen/margin_top_for_all_elements_text_view"
        android:layout_marginLeft="@dimen/text_view_margin_left"
        android:layout_toLeftOf="@id/hour_7"
        android:maxLines="2"
        android:text="@string/sunday"
        />

</RelativeLayout>