<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/third_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.app.verst.verstapp.InformationAboutBank">

    <RelativeLayout
        android:id="@+id/head_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        >

        <TextView
            android:id="@+id/third_address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/padding_left_for_address_third_text_view"
            android:layout_marginTop="@dimen/padding_top_for_address_third_text_view"
            android:layout_toLeftOf="@+id/rectangle_with_line"
            android:maxLines="2"
            android:text="@string/address"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_for_address_third_text_view"
            />
        <TextView
            android:id="@+id/third_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/third_address_text_view"
            android:layout_alignLeft="@id/third_address_text_view"
            android:layout_toLeftOf="@id/rectangle_with_line"
            android:paddingTop="@dimen/padding_top_for_description_text_view"
            android:maxLines="2"
            android:text="@string/office_text_view"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_for_description_third_text_view"
            />

        <ImageButton
            android:id="@+id/arrow_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_subdirectory_arrow_right_black_24dp"
            android:background="@android:color/holo_green_light"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_left_for_arrow_image_button"
            android:paddingTop="@dimen/padding_top_for_arrow_image_button"/>

        <ImageButton
            android:id="@+id/rectangle_with_line"
            android:layout_width="@dimen/layout_width_for_rectangle_image_button"
            android:layout_height="@dimen/layout_height_for_rectangle_image_button"
            android:layout_alignParentRight="true"
            android:src="@drawable/rectangle"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/arrow_image_button"
            android:layout_alignLeft="@id/arrow_image_button"
            android:paddingTop="@dimen/padding_top_for_distance_third"
            android:maxLines="1"
            android:text="@string/distance"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_for_distance_third"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_smile_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_relative"
        android:src="@drawable/ic_mood_black_24dp"
        android:layout_marginTop="@dimen/margin_top_for_smile_image_view"
        android:layout_marginLeft="@dimen/margin_left_for_smile_image_view"
        />

    <TextView
        android:id="@+id/state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_smile_image_view"
        android:layout_below="@id/head_relative"
        android:maxLines="2"
        android:text="@string/state_name_image_view"
        android:layout_marginTop="@dimen/margin_top_for_state_text_view"
        android:layout_marginLeft="@dimen/margin_left_for_state_text_view"
        />
    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/state_text_view"
        android:layout_alignLeft="@+id/state_text_view"
        android:layout_toRightOf="@id/image_smile_image_view"
        android:maxLines="2"
        android:text="@string/status"
        android:textSize="@dimen/text_size_for_status__text_view"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/horizontal_line_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_text_view"
        android:src="@drawable/horizontal_line"
        android:background="@android:color/darker_gray"
        android:layout_alignLeft="@+id/state_text_view"
        android:layout_marginTop="@dimen/margin_top_for_horizontal_line_image_view"

    />

    <include
        android:id="@+id/schedule_include"
        layout="@layout/schedule"
        android:layout_below="@id/horizontal_line_image_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top_for_schedule_include"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_below="@id/schedule_include"
        android:layout_marginTop="@dimen/margin_top_for_relative_clickable_layout"
        >

    <ImageButton
        android:id="@+id/phone_button_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_right_for_phone_button_image_view"
        android:layout_marginTop="@dimen/margin_top_for_phone_button_image_view"
        android:src="@drawable/ic_phone_black_24dp"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/id_phone_description_text_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/phone_button_image_view"
        android:layout_marginLeft="@dimen/margin_left_for_phone_description_text_view"
        android:text="@string/phone_description"
        android:maxLines="2"
       />

    <Button
        android:id="@+id/phone_number_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_height_for_phone_number_button"
        android:layout_below="@id/id_phone_description_text_view_button"
        android:layout_toLeftOf="@id/phone_button_image_view"
        android:layout_marginRight="@dimen/margin_right_for_phone_number"
        android:layout_alignLeft="@id/id_phone_description_text_view_button"
        android:text="@string/phone_number"
        android:background="@android:color/transparent"
        />
    </RelativeLayout>


</RelativeLayout>


<!--//Code convention-->
<!--//vertical line + clickable-->
<!--//Pnone will make layout and clickable-->